First pass for Wombat.
Revise data reading to work with groupArray() from ClickHouse data. Don't resort the X axis order, but take whatever order ClickHouse gives us.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "groupedbarchart-panel",
+  "name": "wombat-groupedbarchart-panel",
   "private": true,
   "version": "1.0.1",
   "description": "",
